package DiseñoModular;

public interface Storable {
    int getId();
    String getTitle();
}